# D-ragon-OS

./: .gitignore  CMakeLists.txt  README.md
docs/sdk/: APIReference.md  Architecture.md  GettingStarted.md  PluginGuide.md
include/Animation/: Animation.hpp  AnimationCurve.hpp  AnimationManager.hpp  AnimationState.hpp  AnimationTimeline.hpp  Easing.hpp  Interpolator.hpp
include/AppRuntime/: ApplicationInstance.hpp  ApplicationManager.hpp  ApplicationMetadata.hpp
include/Apps/: AppInfo.hpp  ApplicationRegistry.hpp  Apps.hpp
include/Command/: Builtins.hpp  Command.hpp  CommandContext.hpp  CommandRegistry.hpp  CommandResult.hpp
include/Completion/: CompletionEngine.hpp  CompletionProvider.hpp
include/Config/: Config.hpp
include/Core/: Application.hpp
include/Desktop/: Desktop.hpp  DesktopManager.hpp  DesktopScene.hpp  Wallpaper.hpp
include/Diagnostics/: CrashReporter.hpp  DebugConsoleWindow.hpp  DevToolsManager.hpp  DiagnosticDashboardWindow.hpp  DiagnosticsTypes.hpp  LogManager.hpp  PerformanceProfiler.hpp  SystemMonitorWindow.hpp
include/DragonUI/: DragonUI.hpp  DragonUISystem.hpp
include/Engine/: Engine.hpp  EngineContext.hpp  System.hpp  SystemManager.hpp
include/Events/: EventBus.hpp
include/Explorer/: ExplorerSystem.hpp  ExplorerTypes.hpp  ExplorerWindow.hpp
include/ExtensionPoints/: ContextMenuExtension.hpp  ExtensionPoint.hpp  SettingsPage.hpp  StartMenuExtension.hpp  TaskbarWidget.hpp
include/FileSystem/: FileEntry.hpp  FileSystemService.hpp
include/Graphics/: Brush.hpp  Color.hpp  Graphics.hpp  RenderTarget.hpp  Renderer.hpp
include/History/: History.hpp
include/Input/: CursorManager.hpp  DebugOverlay.hpp  HitTest.hpp  InputEvent.hpp  InputManager.hpp  KeyCodes.hpp  Keyboard.hpp  Mouse.hpp  MouseButtons.hpp  MouseManager.hpp  UIEvents.hpp
include/Notifications/: Notification.hpp  NotificationCenter.hpp  NotificationManager.hpp
include/Plugins/: PluginContext.hpp  PluginLoader.hpp  PluginManager.hpp  PluginMetadata.hpp  PluginRegistry.hpp
include/Process/: Process.hpp  ProcessHandle.hpp  ProcessManager.hpp
include/Resources/: AssetPath.hpp  FontResource.hpp  IconResource.hpp  ImageResource.hpp  Resource.hpp  ResourceCache.hpp  ResourceHandle.hpp  ResourceManager.hpp  ResourceType.hpp  ThemeResource.hpp
include/Search/: SearchIndex.hpp  SearchProvider.hpp  SearchQuery.hpp  SearchResult.hpp  SearchService.hpp
include/Security/: CredentialManager.hpp  LoginScreen.hpp  PermissionManager.hpp  SecurityCommands.hpp  SecurityConfig.hpp  SecuritySystem.hpp  SecurityTypes.hpp  UserManager.hpp
include/Services/: BackgroundService.hpp  ServiceManager.hpp  ServiceState.hpp  Services.hpp
include/Session/: SessionManager.hpp
include/Settings/: SettingsSystem.hpp  SettingsTypes.hpp  SettingsWindow.hpp
include/StartMenu/: SearchTypes.hpp  StartMenu.hpp  StartMenuAnimations.hpp  StartMenuController.hpp
include/Taskbar/: Taskbar.hpp
include/Terminal/: TerminalBuffer.hpp  TerminalSystem.hpp  TerminalTheme.hpp  TerminalWindow.hpp
include/Theme/: Theme.hpp  ThemeColor.hpp  ThemeManager.hpp  ThemeMetrics.hpp  ThemeMode.hpp  ThemePalette.hpp  ThemeShadow.hpp  ThemeTypography.hpp
include/UI/: UI.hpp
include/Utils/: Utils.hpp
include/Window/: Window.hpp
include/WindowManager/: DragonWindow.hpp  SnapLayout.hpp  WindowAnimations.hpp  WindowCollection.hpp  WindowEvent.hpp  WindowManager.hpp  WindowState.hpp  WindowStyle.hpp
plugins/sample/: CMakeLists.txt  SamplePlugin.cpp  plugin.json
sdk/DragonOS/: Application.hpp  Config.hpp  Dialog.hpp  DragonOS.hpp  Events.hpp  File.hpp  Input.hpp  Logging.hpp  Menu.hpp  Notification.hpp  PluginAPI.hpp  Resource.hpp  Theme.hpp  Version.hpp  Window.hpp
src/: main.cpp
src/Animation/: Animation.cpp  AnimationManager.cpp  AnimationTimeline.cpp  Easing.cpp
src/AppRuntime/: ApplicationManager.cpp
src/Apps/: ApplicationRegistry.cpp
src/Command/: Builtins.cpp  CommandRegistry.cpp
src/Completion/: CompletionEngine.cpp
src/Core/: Application.cpp
src/Desktop/: Desktop.cpp  DesktopManager.cpp  DesktopScene.cpp  Wallpaper.cpp
src/Diagnostics/: CrashReporter.cpp  DebugConsoleWindow.cpp  DevToolsManager.cpp  DiagnosticDashboardWindow.cpp  LogManager.cpp  PerformanceProfiler.cpp  SystemMonitorWindow.cpp
src/DragonUI/: DragonUISystem.cpp
src/Engine/: Engine.cpp  SystemManager.cpp
src/Events/: EventBus.cpp
src/Explorer/: ExplorerSystem.cpp  ExplorerWindow.cpp
src/ExtensionPoints/: ExtensionPoint.cpp
src/FileSystem/: FileSystemService.cpp
src/Graphics/: Renderer.cpp
src/History/: History.cpp
src/Input/: CursorManager.cpp  DebugOverlay.cpp  InputManager.cpp  Keyboard.cpp  Mouse.cpp  MouseManager.cpp
src/Notifications/: NotificationCenter.cpp  NotificationManager.cpp
src/Plugins/: PluginLoader.cpp  PluginManager.cpp  PluginRegistry.cpp
(+144 files in other folders)
